[package]
name = "halo2-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs_v030 = { git = "https://github.com/privacy-scaling-explorations/halo2.git", package = "halo2_proofs", rev = "v0.3.0", features = ["dev-graph", "derive_serde"], optional = true } 
halo2_proofs_latest = { git = "https://github.com/privacy-scaling-explorations/halo2.git", package = "halo2_proofs", rev = "bc30c465", features = ["dev-graph", "derive_serde"], optional = true } 

# halo2_gadgets = { git = "https://github.com/privacy-scaling-explorations/halo2.git", rev = "v0.3.0" } 
# halo2_proofs = { path = "../../external/pse-halo2/halo2_proofs", features = ["dev-graph", "derive_serde"] } 
# halo2_gadgets = { path = "../../external/pse-halo2/halo2_gadgets" } 
# snark-verifier-sdk = { git = "https://github.com/privacy-scaling-explorations/snark-verifier.git", rev = "37b99a31", optional = true } 
# snark-verifier = { git = "https://github.com/privacy-scaling-explorations/snark-verifier.git", rev = "37b99a31", optional = true } 
plotters = "0.3.4"
rand_chacha = "0.3"
tabled = "0.14.0"
ethers = "2.0.7"
serde = "1.0.188"
serde_json = "1.0.107"

[features]
default = ["latest-halo2"]
# default = ["v030-halo2"]

# latest
latest-halo2 = ["dep:halo2_proofs_latest"]
latest-circuit-params = ["halo2_proofs_latest/circuit-params"]

# v030
v030-halo2 = ["dep:halo2_proofs_v030"]
v030-circuit-params = ["halo2_proofs_v030/circuit-params"]

# evm-verifier = ["snark-verifier", "snark-verifier-sdk"]